update header-full.css footer.css header-full.ejs footer.ejs

--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -134,7 +134,7 @@ header {
 
 .header--title {
   margin-top: 64px;
-  margin-left: -540px;
+  /* margin-left: -540px; */
 }
 
 .header--title h1 {
