--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -5,7 +5,7 @@ footer {
   display: inherit;
   align-items: center;
   justify-content: space-between; */
-  padding: 32px;
+  padding: 32px 0 128px 0;
   background: #f6f6f6;
   /* border-top: 1px solid gray; */
 
@@ -27,19 +27,18 @@ footer {
 }
 
 #footer__contact {
-  
 }
 
 #footer__contact h3,
 .about h3,
 .update h3 {
   font-size: 1.375rem;
-  margin: 0;
+  /* margin: 0; */
 }
 
 #footer__contact p {
   font-size: 1rem;
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .contact__social {
@@ -92,13 +91,13 @@ footer {
   border-radius: 8px;
   border: 1px #ebebeb solid;
   box-sizing: border-box;
-  padding: 0 16px
+  padding: 0 16px;
 }
 
 .update__confirm-btn {
   height: 48px;
   border-radius: 8px;
-  background-color: #FE9C0B;
+  background-color: #fe9c0b;
   color: white;
   border: none;
   box-sizing: border-box;
