--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -1,20 +1,21 @@
 <header>
-    <div class="container">
-        <div class="container__header--top">
-            <div class="logo-img">
-                <img src="/imgs/logo-white.png" alt="" />
-            </div>
-            <div class="container__nav--top">
-                <ul>
-                    <li><a href="#">Trang chủ</a></li>
-                    <li><a href="#">Thông báo</a></li>
-                </ul>
-            </div>
-            <div class="top-authenticator">
-                <p>Chào,</p>
-                <p>Giau Phan</p>
-                <img src="/imgs/logo-white.png" alt="" />
-            </div>
-        </div>
+  <div class="container">
+    <div class="container__header--top">
+      <div class="logo-img">
+        <img src="/imgs/logo-white.png" alt="" />
+      </div>
+      <div class="container__nav--top">
+        <ul>
+          <li><a href="#">Trang chủ</a></li>
+          <li><a href="#">Thông báo</a></li>
+        </ul>
+      </div>
+      <div class="top-authenticator">
+        <p>Chào,</p>
+        <p>Giau Phan</p>
+        <img src="/imgs/logo-white.png" alt="" />
+      </div>
     </div>
+  </div>
 </header>
+<div style="width: 100%; height: 112px"></div>
