--- a/src/views/components/otp.ejs
+++ b/src/views/components/otp.ejs
@@ -29,7 +29,9 @@
 
                         <button class="otp__button--submit2">Tiếp tục</button>
                     </div>
-                    <img class="otp__close--btn" src="../footer/Public/iconcross.svg" alt="Đóng">
+                    <div class="otp__close--btn">
+                        <span class="material-symbols-outlined">cancel</span>
+                    </div>
                 </div>
             </div>
         </div>
