--- a/src/views/pages/account-page.ejs
+++ b/src/views/pages/account-page.ejs
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/styles/pages/account-page.css" />
-    <title>Thông tin cá nhân</title>
+    <title>2WAYS.com</title>
   </head>
   <body>
     <%- include('../partials/header-small') %>
@@ -33,7 +33,7 @@
 
         <div class="aside--section">
           <p>Thông tin cá nhân</p>
-          <p>Lịch sử đặt phòng</p>
+          <p class="historyBtn">Lịch sử đặt phòng</p>
           <p>Tài khoản thanh toán</p>
           <p>Đổi mật khẩu</p>
         </div>
@@ -161,6 +161,8 @@
         </div>
       </section>
     </div>
+
+    <%- include('../partials/footer') %>
 
     <script src="/scripts/account-page.js"></script>
   </body>
