Up file change-password.ejs and css, comment.ejs and css, review-pop.ejs and css and js, fix ui

--- a/src/views/pages/account-page.ejs
+++ b/src/views/pages/account-page.ejs
@@ -19,7 +19,7 @@
   <body>
     <%- include('../partials/header-small') %>
 
-    <div class="container">
+    <div class="accountpage--container">
       <aside class="aside--wrapper">
         <div class="aside--content">
           <img src="/imgs/milo.jpg" alt="" />
