--- a/src/views/pages/account-page/booking-history.ejs
+++ b/src/views/pages/account-page/booking-history.ejs
@@ -20,8 +20,9 @@
     />
   </head>
   <body>
+    <%- include('../../partials/header-small.ejs') %>
 
-    <div class="container">
+    <div class="bookinghistory--container">
       <aside class="aside--wrapper">
         <div class="aside--content">
           <img src="../../img/row-1-column-6.png" alt="" />
@@ -489,5 +490,7 @@
         <li class="page-item"><a class="page-link" href="#"> > </a></li>
       </ul>
     </nav>
+
+    <%- include('../../partials/footer.ejs') %>
   </body>
 </html>
