--- a/src/public/styles/pages/account-page/booking-history.css
+++ b/src/public/styles/pages/account-page/booking-history.css
@@ -11,9 +11,12 @@ html {
 
 body {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.container {
+.bookinghistory--container {
     margin-top: 12px;
     margin-bottom: 12px;
     /* width: 80%; */
