--- a/src/public/styles/pages/account-page/change-password.css
+++ b/src/public/styles/pages/account-page/change-password.css
@@ -9,10 +9,14 @@ html {
 
 body {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.container {
+.changepassword--container {
     margin-top: 12px;
+    margin-bottom: 12px;
     /* width: 80%; */
     width: 1152px;
     display: flex;
