--- a/src/public/styles/pages/account-page/payment-account.css
+++ b/src/public/styles/pages/account-page/payment-account.css
@@ -10,9 +10,12 @@ html {
 
 body {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.container {
+.paymentaccount--container {
     margin-top: 12px;
     margin-bottom: 12px;
     /* width: 80%; */
