--- a/src/views/pages/account-page/change-password.ejs
+++ b/src/views/pages/account-page/change-password.ejs
@@ -20,9 +20,9 @@
     />
   </head>
   <body>
-    <header style="height: 160px; background-color: pink"></header>
+    <%- include('../../partials/header-small.ejs') %>
 
-    <div class="container">
+    <div class="changepassword--container">
       <aside class="aside--wrapper">
         <div class="aside--content">
           <img src="../img/row-1-column-6.png" alt="" />
@@ -62,5 +62,7 @@
         </div>
       </section>
     </div>
+
+    <%- include('../../partials/footer.ejs') %>
   </body>
 </html>
