--- a/src/public/styles/components/room.css
+++ b/src/public/styles/components/room.css
@@ -136,12 +136,126 @@
     font-weight: 500;
 }
 
-.room__content--right a {
+.room__content--right button {
     height: 48px;
     box-sizing: border-box;
-    padding: 10px 8px 0 8px;
+    padding: 8px;
     background-color: #00A1A6;
+    border: 0;
     border-radius: 8px;
     font-weight: 500;
     color: var(--white);
+}
+
+.modal-content {
+    flex-direction: row;
+    border-radius: 8px;
+    border: none;
+}
+
+.modal-content h1,
+.modal-content h2,
+.modal-content p {
+    margin: 0;
+}
+
+.modal__view {
+    width: 60%;
+    display: inherit;
+    flex-direction: column;
+    gap: 24px;
+    background-color: #4D5F7C;
+    color: var(--white);
+    padding: 16px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.modal__view h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.modal__view--big {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal__view--big img {
+    width: 80%;
+    height: 240px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.modal__view--big span {
+    font-size: 2rem;
+    background-color: rgba(134, 172, 173, 0.70);
+    border-radius: 6px;
+}
+
+.modal__view--small {
+    display: inherit;
+    justify-content: space-between;
+}
+
+.modal__view--small img {
+    width: 100px;
+    height: 62px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.modal__detail {
+    width: 40%;
+    display: inherit;
+    flex-direction: column;
+    gap: 24px;
+    padding: 16px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.detail__info {
+    display: inherit;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.modal__detail h2 {
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.modal__header {
+    display: inherit;
+    justify-content: space-between;
+}
+
+.detail__item {
+    display: inherit;
+    gap: 12px;
+}
+
+.detail__item span {
+    color: var(--primary-color);
+}
+
+.detail__feature {
+    display: inherit;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.feature__row {
+    display: inherit;
+    justify-content: space-between;
+}
+
+.feature__col-left,
+.feature__col-right {
+    display: inherit;
+    flex-direction: column;
+    gap: 12px;
 }
