--- a/src/public/styles/pages/acco-detail.css
+++ b/src/public/styles/pages/acco-detail.css
@@ -285,11 +285,11 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 12px;
-    border-radius: 8px;
 }
 
-.bg-gray {
+.general-info__item:nth-child(odd) {
     background-color: rgba(217, 217, 217, 0.50);
+    border-radius: 8px;
 }
 
 .general-info__item--left {
