--- a/src/public/styles/pages/account-page/change-password.css
+++ b/src/public/styles/pages/account-page/change-password.css
@@ -38,7 +38,7 @@ hr {
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     background: #fff;
-    height: 376px;
+    height: 450px;
 }
 
 .aside--content {
@@ -51,7 +51,14 @@ hr {
 }
 
 .aside--section p {
-    padding: 0 12px;
+    padding: 12px;
+    height: 48px;
+}
+
+.aside--section p:hover {
+    border-radius: 8px;
+    background-color: #d9d9d9;
+    transition: 0.3s;
 }
 
 .aside--section p:nth-child(4) {
@@ -82,7 +89,7 @@ hr {
     height: 240px;
 }
 
-.form--item {
+.form--itemchange1 {
     display: flex;
     gap: 0;
     width: 100%;
@@ -91,12 +98,12 @@ hr {
     height: 110px;
 }
 
-.form--item h1 {
+.form--itemchange1 h1 {
     font-size: 22px !important;
     font-weight: 500;
 }
 
-.form--item p {
+.form--itemchange1 p {
     margin: 0;
     padding: 0;
     font-size: 14px;
@@ -105,6 +112,77 @@ hr {
 
 .form--submit {
     width: 96px;
+    height: 48px;
+    border-radius: 8px;
+    background-color: #fe9c0b;
+    color: white;
+    border: none;
+    font-size: 16px;
+}
+
+.profileBtn,
+.historyBtn,
+.accountPaymentBtn,
+.changePasswordBtn,
+.logoutBtn {
+    cursor: pointer;
+}
+
+.form--inputchange2 {
+    padding: 24px;
+    border: 1px solid #bec8c9;
+    border-radius: 8px;
+    width: 75%;
+    padding: 12px;
+}
+
+.form--inputchange2 .center {
+    text-align: center;
+}
+.form--items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+.form--item {
+    display: flex;
+    gap: 0;
+    width: 100%;
+    align-items: center;
+}
+
+.form--item input {
+    padding: 12px;
+}
+
+.form--item h1 {
+    width: 305px;
+    font-size: 22px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.form--submitbutton {
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+    margin-top: 12px;
+}
+
+.form--submit1 {
+    width: 115px;
+    height: 48px;
+    border-radius: 8px;
+    color: #fe9c0b;
+    background-color: white;
+    border: 1px solid #fe9c0b;
+    font-size: 16px;
+}
+
+.form--submit2 {
+    width: 115px;
     height: 48px;
     border-radius: 8px;
     background-color: #fe9c0b;
