--- a/src/views/components/room-in-hs.ejs
+++ b/src/views/components/room-in-hs.ejs
@@ -1,6 +1,6 @@
 <div class="room__in__hs">
   <div class="room__in__hs_img">
-    <img src="../../img/row-1-column-6.png" alt="" />
+    <img src="/imgs/room.png" alt="" />
   </div>
   <div class="room__in__title">
     <h1>Phòng gia đình</h1>
@@ -85,7 +85,7 @@
             />
           </g>
         </svg>
-        <p>Chính sách hủy phòng</p>
+        <p href="#">Chính sách hủy phòng</p>
       </div>
       <div class="price__room">
         <p class="before-discount">VND 2.500.000</p>
@@ -95,7 +95,7 @@
     </div>
     <div class="button-room__in__hs">
       <button class="form--submit1">Xem chi tiết</button>
-      <button class="form--submit2">Đánh giá</button>
+      <button class="form--submit2 reviewBtn">Đánh giá</button>
     </div>
   </div>
 </div>
