--- a/src/views/pages/account-page.ejs
+++ b/src/views/pages/account-page.ejs
@@ -22,7 +22,7 @@
     <div class="accountpage--container">
       <aside class="aside--wrapper">
         <div class="aside--content">
-          <img src="/imgs/milo.jpg" alt="" />
+          <img src="../img/row-1-column-6.png" alt="" />
           <div class="aside__content--detail">
             <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
             <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
@@ -32,15 +32,15 @@
         <hr />
 
         <div class="aside--section">
-          <p>Thông tin cá nhân</p>
+          <p class="profileBtn">Thông tin cá nhân</p>
           <p class="historyBtn">Lịch sử đặt phòng</p>
-          <p>Tài khoản thanh toán</p>
-          <p>Đổi mật khẩu</p>
+          <p class="accountPaymentBtn">Tài khoản thanh toán</p>
+          <p class="changePasswordBtn">Đổi mật khẩu</p>
         </div>
 
         <hr />
 
-        <div class="aside--item">
+        <div class="aside--item logoutBtn">
           <p>Đăng xuất</p>
         </div>
       </aside>
