--- a/src/views/pages/account-page/change-password.ejs
+++ b/src/views/pages/account-page/change-password.ejs
@@ -35,34 +35,83 @@
         <hr />
 
         <div class="aside--section">
-          <p>Thông tin cá nhân</p>
-          <p>Lịch sử đặt phòng</p>
-          <p>Tài khoản thanh toán</p>
-          <p>Đổi mật khẩu</p>
+          <p class="profileBtn">Thông tin cá nhân</p>
+          <p class="historyBtn">Lịch sử đặt phòng</p>
+          <p class="accountPaymentBtn">Tài khoản thanh toán</p>
+          <p class="changePasswordBtn">Đổi mật khẩu</p>
         </div>
 
         <hr />
 
-        <div class="aside--item">
+        <div class="aside--item logoutBtn">
           <p>Đăng xuất</p>
         </div>
       </aside>
 
-      <section class="form--input">
+      <section id="change1" class="form--input">
         <div class="form--title">
           <h1>Đổi mật khẩu</h1>
           <p>Đổi mật khẩu cho tài khoản của bạn</p>
         </div>
         <hr />
 
-        <div class="form--item">
+        <div class="form--itemchange1">
           <h1>Mật khẩu</h1>
           <p>Đổi mật khẩu thường xuyên để giữ tài khoản của bạn được bảo mật</p>
-          <button class="form--submit">Đặt lại</button>
+          <button class="form--submit setBtn">Đặt lại</button>
+        </div>
+      </section>
+
+      <section id="change2" class="form--inputchange2">
+        <div class="form--title">
+          <h1>Đổi mật khẩu</h1>
+          <p>Đổi mật khẩu cho tài khoản của bạn</p>
+        </div>
+        <hr />
+        <p class="center">
+          Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số.
+        </p>
+
+        <div class="form--items">
+          <div class="form--item">
+            <h1>Mật khẩu cũ:</h1>
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Nhập mật khẩu cũ"
+            />
+          </div>
+
+          <div class="form--item">
+            <h1>Mật khẩu mới:</h1>
+            <input
+              class="form-control form__password"
+              type="text"
+              placeholder="Nhập mật khẩu mới"
+            />
+            <div class="error-message" id="error-message"></div>
+          </div>
+
+          <div class="form--item">
+            <h1>Xác nhận mật khẩu:</h1>
+            <input
+              class="form-control form__password-confirm"
+              type="text"
+              placeholder="Nhập lại mật khẩu mới"
+            />
+            <div class="error-message" id="error-message"></div>
+          </div>
+        </div>
+        <div class="form--submitbutton">
+          <button class="form--submit1">Hủy</button>
+
+          <button class="form--submit2 confirm-button">Xác nhận</button>
         </div>
       </section>
     </div>
 
     <%- include('../../partials/footer.ejs') %>
+
+    <script src="/scripts/change-password.js"></script>
   </body>
 </html>
