--- a/src/views/components/review-popup.ejs
+++ b/src/views/components/review-popup.ejs
@@ -41,7 +41,7 @@
       </div>
 
       <div class="form--submitbutton">
-        <button class="form--submit1">Hủy</button>
+        <button class="form--submit1 closeBtn">Hủy</button>
 
         <button class="form--submit2">Đăng</button>
       </div>
