--- a/src/views/pages/account-page/change-password.ejs
+++ b/src/views/pages/account-page/change-password.ejs
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="form--submitbutton">
-          <button class="form--submit1">Hủy</button>
+          <button class="form--submit1 cancelBtn">Hủy</button>
 
           <button class="form--submit2 confirm-button">Xác nhận</button>
         </div>
