--- a/src/public/styles/pages/account-page/payment-account.css
+++ b/src/public/styles/pages/account-page/payment-account.css
@@ -1,7 +1,9 @@
 @import url("/styles/variables.css");
 @import url("/styles/partials/header-small.css");
-@import url("/styles/components/room-in-hs.css");
+/* @import url("/styles/components/room-in-hs.css"); */
 @import url("/styles/partials/footer.css");
+@import url("/styles/components/bank-account-popup.css");
+
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
